<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_below="@+id/my_awesome_toolbar"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >


            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/my_awesome_toolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="Full Name"
                android:inputType="textPersonName|textAutoComplete"
                android:singleLine="true"/>

            <EditText
                android:singleLine="true"
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="E-mail"
                android:inputType="textEmailAddress|textAutoComplete"/>

            <EditText
                android:singleLine="true"
                android:id="@+id/passwordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailAddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:hint="Password"
                android:inputType="textPassword"/>

            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/signUp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="#006699"
                android:text="SIGN UP"
                android:textColor="#FFFFFF"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
